# tensorsat

./: .gitignore  CONTRIBUTING.md  MANIFEST.in  README.md  autodoc_typehints.py  local-install.bat  pyproject.toml  test.ipynb
.github/workflows/: main.yml
docs/: api-toc.rst  autodoc-type-aliases.json  conf.py  getting-started.rst  index.rst  make-api.json  make-api.py  requirements.txt
docs/api/: tensorsat._autoray.rst  tensorsat._utils.meta.rst  tensorsat._utils.misc.rst  tensorsat._utils.rst  tensorsat.contraction.abc.rst  tensorsat.contraction.cotengra.rst  tensorsat.contraction.rst  tensorsat.contraction.simple.rst  tensorsat.contractions.abc.rst  tensorsat.contractions.cotengra.rst  tensorsat.contractions.rst  tensorsat.contractions.simple.rst  tensorsat.diagrams.boxes.rst  tensorsat.diagrams.contractions.rst  tensorsat.diagrams.diagrams.rst  tensorsat.diagrams.rst  tensorsat.diagrams.types.rst  tensorsat.diagrams.wirings.rst  tensorsat.lang.fin_rel.rst  tensorsat.lang.rst  tensorsat.lib.bincirc.rst  tensorsat.lib.rst  tensorsat.lib.sat.rst  tensorsat.rst  tensorsat.utils.rst  (+2 more)
examples/: all_shuffled.txt  counterexample1.txt  counterexample2.txt  counterexample3.txt  counterexamples.txt  formulae_new.txt  simple_formula.txt  single_formula.txt  test.txt  test1.txt  test20.txt  test22.txt  test40.txt  test_dimacs_parser.py  test_main.py  test_sat_solver.py
notebooks/: 01-introduction.ipynb  02-bool-tensors.ipynb  02-random-ksat.ipynb
paper/: README.md  typst-watch.bat
tensorsat/: __init__.py  _autoray.py  autoray.py  benchmark.py  diagrams.py  utils.py
(+54 files in other folders)
