[project]
name = "tensorsat"
version = "0.0.0"
description = "A SAT solver using tensor networks."
dependencies = ["numpy", "hashcons", "typing-validation"]

[tool.mypy]

python_version = "3.13"
strict = true

[tool.setuptools.packages.find]
include = ["tensorsat"]
exclude = ["notebooks", "papers"]
namespaces = false
